@@ -151,6 +151,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/Movie.html#skip>Movie.skip</a> - skip the movie playback position forward<br>
 <a href=ref/Movie.html#stop>Movie.stop</a> - stop movie playback<br>
 <a href=ref/Rect.html#clamp>Rect.clamp</a> - move rectangle inside another<br>
+<a href=ref/Rect.html#clamp_ip>Rect.clamp_ip</a> - moves the ectangle inside another<br>
 <a href=ref/Rect.html#clip>Rect.clip</a> - rectangle cropped inside another<br>
 <a href=ref/Rect.html#collidelist>Rect.collidelist</a> - find overlapping rectangle<br>
 <a href=ref/Rect.html#collidelistall>Rect.collidelistall</a> - find all overlapping rectangles<br>
