@@ -104,7 +104,7 @@ restart a paused channel</td></tr>
 Channel.fadeout(millisec) -> None
 </tt></font><ul>
 Fade out the playing sound and stops it over the
-given millisonds.
+given milliseconds.
 </ul><br>&nbsp;<br>
 
 <a name=get_busy><font size=+2><b>get_busy
