@@ -82,6 +82,10 @@ height.
 move rectangle inside another</td></tr>
 
 
+<tr><td><a href=#clamp_ip>clamp_ip</a></td><td> -
+moves the ectangle inside another</td></tr>
+
+
 <tr><td><a href=#clip>clip</a></td><td> -
 rectangle cropped inside another</td></tr>
 
@@ -151,6 +155,16 @@ rectangle covering all inputs</td></tr>
 Rect.clamp(rectstyle) -> Rect
 </tt></font><ul>
 Returns a new rectangle that is moved to be
+completely inside the base rectangle. If the given
+rectangle is too large for the base rectangle in
+an axis, it will be centered on that axis.
+</ul><br>&nbsp;<br>
+
+<a name=clamp_ip><font size=+2><b>clamp_ip
+</b></font><br><font size=+1><tt>
+Rect.clamp_ip(rectstyle) -> None
+</tt></font><ul>
+Moves the Rect to be
 completely inside the base rectangle. If the given
 rectangle is too large for the base rectangle in
 an axis, it will be centered on that axis.
